# proyecto_cortinas

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/components/: common.h  http_server.c  http_server.h  operation_mode.c  operation_mode.h  registro_horario.c  registro_horario.h  sensors_adc.c  sensors_adc.h  threshold_manager.c  threshold_manager.h  time_manager.c  time_manager.h  wifi_manager.c  wifi_manager.h
main/web_page/: index.html  script.js  styles.css
